# 2023-Game-Server-Refine

./: .gitignore  .gitmodules  README.md
RefinedServer/: RefinedServer.sln
RefinedServer/Core/: Asynchron.ixx  BasicUser.ixx  CMakeLists.txt  Core.natvis  Core.vcxitems  ISession.ixx  Network.ixx  User.ixx  UserIdentifier.ixx  UserManager.cpp  UserManager.ixx  Utility.ixx  WorkerManager.ixx
RefinedServer/Core/src/: Asynchron.ixx  BasicUser.ixx  PacketIdentifier.ixx  User.ixx  UserIdentifier.ixx  UserManager.cpp  UserManager.ixx
RefinedServer/Game/: Camera.ixx  Component.ixx  D3DMatrix.ixx  D3DVector.ixx  Game.vcxitems  GameObject.ixx  Object.ixx  PipelineObject.ixx  Scene.ixx  SceneManagement.ixx  SpecializedScene.ixx  Transform.ixx  Window.ixx
RefinedServer/Network/: Addressing.ixx  Asynchron.ixx  BasicSession.ixx  BasicSocket.ixx  BasicUser.ixx  CompletionPort.ixx  Context.ixx  EndPoint.ixx  IOIntrinsic.ixx  ISession.ixx  Intrinsics.ixx  IoState.ixx  Module.ixx  Network.ixx  Network.natvis  Network.vcxitems  Network.vcxitems.filters  Operations.ixx  PacketIdentifier.ixx  Promise.ixx  RIO.ixx  Settings.ixx  Socket.ixx  SocketABi.ixx  ThreadUnit.ixx  User.ixx  UserIdentifier.ixx  Worker.ixx
RefinedServer/RefinedServer/: .editorconfig  Framework.cpp  Framework.hpp  Promise.hpp  RefinedServer.vcxproj  RefinedServer.vcxproj.filters  Server.natvis  UserManager.cpp  UserManager.hpp  Worker.cpp  Worker.hpp  main.cpp  pch.hpp  stdafx.hpp
RefinedServer/TestClient/: Camera.ixx  Component.ixx  Framewokr.cpp  Framewokr.hpp  Framework.cpp  Framework.hpp  Framework.ixx  GameObject.ixx  GameScene.ixx  IntroScene.cpp  IntroScene.ixx  Main.cpp  Main.hpp  MainScene.cpp  MainScene.hpp  MainScene.ixx  Object.ixx  PipelineObject.ixx  Scene.ixx  SceneBasis.ixx  SceneManagement.ixx  SpecializedScene.ixx  System.cpp  System.hpp  TestClient.vcxproj  TestClient.vcxproj.filters  TitleScene.ixx  packages.config  pch.hpp
RefinedServer/Utility/: .gitignore  Atomic.ixx  CMakeLists.txt  Classifier.ixx  Constraints.ixx  D3DMatrix.ixx  D3DUtility.ixx  D3DVector.ixx  DataPacker.ixx  DataUnit.ixx  Deserialization.ixx  Identity.ixx  Indexer.ixx  Locks.ixx  LooseMonad.ixx  Meta.ixx  Monad.ixx  Named.ixx  Object.cc  Print.ixx  Proxy.ixx  Reflection.cc  Reflection.ixx  Serialiazation.inl  Serialization.inl  Serialization.ixx  Singleton.ixx  Spinlock.ixx  String.ixx  StringLiteral.ixx  Testbed.h  Thread.ixx  ThreadUnit.ixx  Time.ixx  Traits.ixx  Transform.ixx  Union.ixx  Utility.ixx  Utility.natvis  Utility.vcxitems
RefinedServer/Utility/src/: Array.ixx  Atomic.ixx  Constraints.ixx  D3DMatrix.ixx  D3DVector.ixx  DataPacker.ixx  Expected.ixx  Indexer.ixx  Locks.ixx  LooseMonad.ixx  Memory.ixx  Meta.ixx  Monad.ixx  Option.ixx  Print.ixx  String.ixx  Testbed.cpp  Testbed.h  Thread.ixx  Traits.ixx  Transform.ixx  Union.ixx  Utility.ixx
RefinedServer/enc_temp_folder/181bc0d8e6598d18edd88e7bda33be67/: Utility.natvis
